--- a/docs/tutorial.Rmd
+++ b/docs/tutorial.Rmd
@@ -83,7 +83,7 @@ This tab allows users to plot connectivity metrics and Marxan results. It also a
 
 ## Using connectivity data as a 'feature'
 
-A simple way to integrate connectivity data into spatial prioritization is to create a discrete connectivity-based conservation feature [@DAloia2017-jp; @Magris2018-yb; @White2014-sk]. To do so requires calculating connectivity metric(s) which represent connectivity process(es)  (*e.g.* betweenness centrality), and then choosing a threshold value(s) from the range of the metric. For example, you may wish to take only the planning units with a betweenness centrality value of  0.8 or higher, which are then converted into a discrete feature (*i.e.* importance areas for connectivity) (Figure 3). Under this treatment, the connectivity-based conservation feature ${j}$ in planning unit ${i}$ (*i.e.* ${r_{ij}}$) becomes binary based on if the planning unit meets (1) or does not meet (0), the threshold.This type of threshold setting is often used with species distribution models, where each planning unit is assigned a probability of species occurrence, and a threshold value is used to convert these continuous distribution data to a binary map (presence vs absence or suitable vs unsuitable) for a particular species [*e.g.* @Minor2008-js]. 
+A simple way to integrate connectivity data into spatial prioritization is to create a discrete connectivity-based conservation feature [@DAloia2017-jp; @Magris2018-yb; @White2014-sk]. To do so requires calculating connectivity metric(s) which represent connectivity process(es)  (*e.g.* betweenness centrality), and then choosing a threshold value(s) from the range of the metric. For example, you may wish to take only the planning units with a betweenness centrality value of  0.8 or higher, which are then converted into a discrete feature (*i.e.* importance areas for connectivity) (Figure 3). Under this treatment, the connectivity-based conservation feature ${j}$ in planning unit ${i}$ (*i.e.* ${r_{ij}}$) becomes binary based on if the planning unit meets (1) or does not meet (0), the threshold. This type of threshold setting is often used with species distribution models, where each planning unit is assigned a probability of species occurrence, and a threshold value is used to convert these continuous distribution data to a binary map (presence vs absence or suitable vs unsuitable) for a particular species [*e.g.* @Minor2008-js]. 
 
 These discrete connectivity features are then treated as any other feature in Marxan, where a minimum target is set, ${T_j}$, (*e.g.* 50% of feature ${j}$). In the absence of ecologically determined thresholds, an appropriate value for the thresholds and target ${T_j}$ can be determined by using a cost trade-off curve where one would test the sensitivity of the cost of the best solution and the total summed metric captured in the solution. The value of the thresholds and target ${T_j}$ could be chosen as the divergent point, where the greatest increase in the connectivity metric is achieved for a relatively small increase in cost (Figure 3) . However, the preferred approach would be to establish conservation targets which lead to a reserve network design which meets ecologically relevant conservation objective(s) such as population viability or a within network metapopulation growth rate > 1 (See "[Post-hoc evaluation](./targets.html)" section for more details).
 
@@ -95,7 +95,7 @@ When appropriate, high connectivity value planning units may also be "locked-in"
 
 ## Connectivity as spatial dependencies in the objective function
 
-Another approach to incorporate connectivity in Marxan is using the connectivity-based data to inform the boundary cost term in the objective function [@Beger2010-ir].This cost signifies the penalty associated with protecting one site but not its well-connected partner site ${cv_{ih}}$ [@Beger2010-ir], which can be manipulated through the "Connectivity Strength Modifier" (CSM) and is similar to the BLM in standard Marxan (Figure 1). For example, as increasing the BLM reduces the edge to area ratio by minimizing costs associated with unprotected boundaries; similarly, increasing the CSM will minimize costs associated with unprotected connectivity linkages. See Beger et al. (2010); Beger et al. (2015) for examples using connectivity estimates as spatial dependencies in the objective function for MPAs in the Coral Triangle [@Beger2010-ir; @Beger2015-zo]. 
+Another approach to incorporate connectivity in Marxan is using the connectivity-based data to inform the boundary cost term in the objective function [@Beger2010-ir].This cost signifies the penalty associated with protecting one site but not its well-connected partner site ${cv_{ih}}$ [@Beger2010-ir], which can be manipulated through the "Connectivity Strength Modifier" (CSM) and is similar to the BLM in standard Marxan (Figure 1). For example, as increasing the BLM reduces the edge to area ratio by minimizing costs associated with unprotected boundaries; similarly, increasing the CSM will minimize costs associated with unprotected connectivity linkages. See Beger et al. (2010); Beger et al. (2015) for examples using connectivity estimates as spatial dependencies in the objective function for MPAs in the Coral Triangle. 
 
 In Marxan Connect, one can combine the use of connectivity as spatial dependencies with a locked-in "Focus Area" (*e.g.* an existing protected area) to generate candidate stepping stones. However, it should be noted that the method will likely triage isolated sites out of the final solution unless these are included using other methods (*e.g.* a conservation feature for an isolated site which happens to contain a unique species).
 
@@ -115,9 +115,9 @@ We've provided a limited set of workflow examples designed to demonstrate some o
 
 - [Using the spatial dependencies approach using landscape-based data](./CSD_landscape.html)
 
-- [Using the spatial dependencies approach using demographic-based data](./CSD_demographic.html) (in-development)
+- Using the spatial dependencies approach using demographic-based data (in-development)
 
-- [Using the conservation features approach using landscape-based data](./CF_landscape.html) (in-development)
+- Using the conservation features approach using landscape-based data (in-development)
 
 - [Setting targets and post-hoc evaluation](./targets.html)
 
