add paragraph about connectivity data

--- a/docs/tutorial.Rmd
+++ b/docs/tutorial.Rmd
@@ -53,6 +53,8 @@ This tab allows users to input demographic or landscape-based connectivity data,
 
 When using a landscape connectivity approach, Marxan Connect can calculate a connectivity matrix using Euclidean distance or Least-Cost Path between the centroids of planning units or the user can import an existing landscape connectivity matrix. Other software packages such as [Circuitscape](http://www.circuitscape.org/) [@McRae2009-aq] and [Conefor](http://www.conefor.org/) [@Saura2009-sa] currently provide a richer set of options and specialized methods to generate custom conservation features, or connectivity matrices, both of which can then be used in Marxan Connect. For example, one could generate a network using current theory (*i.e.* using the movement of electrons in a circuit to approximate organism movement) using Circuitscape and input the resulting connectivity matrix into Marxan Connect to generate conservation features or spatial dependencies.
 
+While Marxan Connect provides some tools to generate connectivity data, no single tool, tutorial or manuscript can cover this field comprehensively. Additionally, there are a number of studies and software already published on the subject (e.g. [Circuitscape](https://circuitscape.org/), [LTRANS](http://northweb.hpl.umces.edu/LTRANS.htm)). This data can be derived from a wide variety of sources (particle tracking models, landscape models, tagging data, etc) and requires local connectivity expertise. This should be done in collaboration with local connectivity experts who already possess expertise in their specific domain.
+
 ## Connectivity Metrics
 
 This tab allows users to select which connectivity metrics to calculate and is dependent on the type of connectivity data imported on the previous tab (demographic or landscape). For example, if the user imports demographic data, only metrics under the demographic heading can be selected. At this point, users also select whether they would like to calculate metrics to create conservation features, spatial dependencies, or both.
